--- a/src/package.json
+++ b/src/package.json
@@ -2,11 +2,23 @@
   "name": "src",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "views/main,html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "window": {   "title": "Speech2Text", 
+        "icon": "assets/icon.png",  
+          "toolbar": true,  
+            "width": 1000, 
+                "height": 1000,  
+                  "min_width": 1000, 
+                    "min_height": 1000, 
+                        "max_width": 1000, 
+                          "max_height": 1000,  
+                            "position": "mouse"  
+
+  },
+  "keywords":[], 
   "author": "",
   "license": "ISC"
 }
