--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "src",
   "version": "1.0.0",
   "description": "",
-  "main": "views/main,html",
+  "main": "views/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
