change name, format, add dist folder to gitignore

--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "window": {   "title": "Speech2Text", 
+  "window": {   
+    "title": "Speech2Text", 
         "icon": "assets/icon.png",  
           "toolbar": true,  
             "width": 1000, 
