--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Speech2Text",
+  "name": "speech2text",
   "version": "1.0.0",
   "description": "Unser Projekt 2E",
   "main": "index.js",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "nw": "^0.52.1-sdk",
     "nw-builder": "^3.5.7"
+  
   },
   "dependencies": {},
   "repository": {
